base64_decode: fix bug #72152 (fail on NUL bytes in strict mode)

This added check is actually for NOT failing in NON-strict mode.
The ch == -2 check later causes the desired failure in strict mode.